--- a/index.html
+++ b/index.html
@@ -299,12 +299,11 @@
                     <p class="hero-subtitle">致力於將設計稿轉化為高效能、高互動性的網站。具備 RWD 響應式網頁設計與元件化開發經驗。</p>
                     <p>
                         <a href="#projects" class="hero-cta-button">瀏覽我的作品集</a>
-                    </p>
-                    <p class="about-content-placeholder">
-                        這裡目前是 Hero 區的占位內容，之後會用 Section SDD 的 Prompt 產生新的 section，請把新的 section 程式碼整段貼在這兩個註解中間，完全取代現在這一區。
-                        <br>
-                        <img loading="lazy" src="https://source.unsplash.com/800x600/?developer,desktop,coding" alt="在筆電前撰寫程式碼的前端開發者">
-                    </p>
+                 <p class="about-content-placeholder">
+    這裡目前是 Hero 區的占位內容，之後會用 Section SDD 的 Prompt 產生新的 section，請把新的 section 程式碼整段貼在這兩個註解中間，完全取代現在這一區。
+    <br>
+    <img loading="lazy" src="https://source.unsplash.com/800x600/?ai,data-analysis,technology" alt="顯示數據分析儀表板與人工智能界面的工作站">
+</p>
                 </div>
             </section>
             <section id="about" class="section section-about" aria-labelledby="about-heading">
